# docs/swagger.json
@@ -464,6 +464,9 @@
                 "client_department": {
                     "type": "boolean"
                 },
+                "cmk_department": {
+                    "type": "boolean"
+                },
                 "db_department": {
                     "type": "boolean"
                 },
@@ -480,6 +483,9 @@
                     "type": "boolean"
                 },
                 "periodic_reporting_department": {
+                    "type": "boolean"
+                },
+                "sales_department": {
                     "type": "boolean"
                 },
                 "source_tracking_department": {
@@ -586,6 +592,9 @@
                 "client_department": {
                     "type": "boolean"
                 },
+                "cmk_department": {
+                    "type": "boolean"
+                },
                 "db_department": {
                     "type": "boolean"
                 },
@@ -602,6 +611,9 @@
                     "type": "boolean"
                 },
                 "periodic_reporting_department": {
+                    "type": "boolean"
+                },
+                "sales_department": {
                     "type": "boolean"
                 },
                 "source_tracking_department": {
