# internal/app/handlers/requests/user_models.go
@@ -20,6 +20,8 @@ type Department struct {
 	DocumentationDepartment     bool `json:"documentation_department"`
 	NrDepartment                bool `json:"nr_department"`
 	DbDepartment                bool `json:"db_department"`
+	CMKDepartment               bool `json:"cmk_department"`
+	SalesDepartment             bool `json:"sales_department"`
 }
 
 type EmailPassword struct {
