# internal/app/handlers/responses/user_model.go
@@ -27,6 +27,8 @@ type Department struct {
 	DocumentationDepartment     bool `json:"documentation_department"`
 	NrDepartment                bool `json:"nr_department"`
 	DbDepartment                bool `json:"db_department"`
+	CMKDepartment               bool `json:"cmk_department"`
+	SalesDepartment             bool `json:"sales_department"`
 }
 
 type Result struct {
